--- a/html/index.css
+++ b/html/index.css
@@ -24,7 +24,10 @@ body{
     background-repeat: no-repeat;
     margin-top: 8px;
     padding: 20px;
+    height:500px;
 }
+
+
 
 .navlist{
     display: flex;
@@ -92,7 +95,9 @@ button:hover i{
 }
 .para{
     color: #ffffff;
-    font-size: 17px;
+    font-size: 20px;
+    letter-spacing: 1px;
+    word-spacing: 1px;
 }
 
 
@@ -109,31 +114,35 @@ button:hover i{
 
 .row{
     display: flex;
+    justify-content: space-around;
     align-items: center;
+    width: 300px;
     padding: 10px 20px;
 }
+
 input{
     flex: 1;
     height: 50px;
     background: transparent;
-    border: 0;
-    outline: 0;
+    border: none;
+    outline: none;
     font-size: 18px;
     color: #333;
 }
-button{
-    background: transparent;
+
+#input-box{
+    text-align: left;
+}
+
+#but{
+    background: #f15b0e;
     border: 0;
     outline: 0;
-}
-button fa-solid{
-    width: 25x;
+    width: 25px;
+    height: 25px;
     color: #555;
     font-size: 22px;
     cursor: pointer;
-}
-::placeholder{
-    color: #555;
 }
 .result-box ul{
 border-top: 1px solid #999;
@@ -241,9 +250,13 @@ text-decoration: none;
 
   }
   
-  .cards .card p.tip {
-    font-size: 1em;
+  .cards .card .tip {
+    font-size: 1.3em;
     font-weight: 700;
+    letter-spacing:1px ;
+    word-spacing: 1px;
+
+
   }
   
   .cards .card p.second-text {
