--- a/html/login.css
+++ b/html/login.css
@@ -25,6 +25,29 @@ body{
     font-size: 16px;
   }
 
+  p{
+    display: inline-block;
+    margin-left: 95%;
+    color: white;
+    padding: 5px;
+  }
+
+  p:hover{
+   border-bottom: 2px solid #fff;
+  }
+
+  #logout{
+    color: white;
+    font-size: 16px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid white;
+    padding: 4px;
+    border-radius: 3px;
+    margin-left: 95%;
+  }
+
+
 .card {
     width: 300px;
     padding: 1.9rem 1.2rem;
