--- a/html/conf.css
+++ b/html/conf.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
 }
-
+html::-webkit-scrollbar{
+    display:none;
+}
 body {
     background-color: #efeeef;
     font-family: 'Times New Roman', Times, serif;
