--- a/html/gal/conf.css
+++ b/html/gal/conf.css
@@ -1,3 +1,6 @@
+html::-webkit-scrollbar{
+    display:none;
+}
 * {
     margin: 0;
     padding: 0;
@@ -375,4 +378,5 @@ body {
         font-size: 18px;
     }
 }
+
 
